--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Luís Assunção", email = "assuncaolfi@gmail.com"},
 ]
 dependencies = [
-    "numpy>=2.0.0",
+    "numpy<2.0.0",
     "scipy>=1.13.1",
     "cvxpy>=1.5.2",
 ]
