--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
 name = "savvi"
-version = "0.2.0"
+version = "0.3.0"
 description = "savvi is a package for Safe Anytime Valid Inference"
 authors = [
     {name = "Luís Assunção", email = "assuncaolfi@gmail.com"},
 ]
 dependencies = [
-    "numpy<2.0.0",
-    "scipy>=1.13.1",
+    "numpy>=2.1.2",
+    "scipy>=1.14.0",
     "cvxpy>=1.5.2",
+    "py-markdown-table>=1.1.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
