--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-_freeze/* linguist-generated=true
-_site/* linguist-generated=true
-reference/* linguist-generated=true
+/_freeze/* linguist-generated=true
+/_site/* linguist-generated=true
+/reference/* linguist-generated=true
